--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -7,7 +7,7 @@
 <body>
     <h1>
         测试
-        <p th:text="'Hello, ' + ${name} + '!'" />
     </h1>
+    <p th:text="'Hello, ' + ${name} + '!'"></p>
 </body>
 </html>
