--- a/src/main/resources/templates/common/navBar.html
+++ b/src/main/resources/templates/common/navBar.html
@@ -33,7 +33,7 @@
                         <!--                    -->
                         <ul class="dropdown-menu">
                             <li><a href="/publish">发布问题</a></li>
-                            <li><a href="/profile">个人中心</a></li>
+                            <li><a href="/profile/settings">个人中心</a></li>
                             <li><a href="/profile/questions">我的问题</a></li>
                             <li><a href="#">注销</a></li>
                         </ul>
