--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,78 +2,41 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>个人中心 - IOT学习社区</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <title th:text="${ sectionName }"></title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 <body>
 <!--导航区域-->
 <div th:insert="~{ common/navBar :: navBar }"></div>
-<!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >-->
-<!--    <h3>分类</h3>-->
-<!--</div>-->
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h1><span class="glyphicon glyphicon-list icon-homepage" aria-hidden="true"></span>发现</h1>
+            <h2><span th:text="${ sectionName }"></span></h2>
             <hr>
-            <div class="media" th:each="news : ${ questionDTOList.questions }">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object avatar-publisher img-rounded"
-                             th:src="${news.getUser().avatarUrl}">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading" th:text="${news.getTitle()}"></h4>
-                    <span th:text="${news.getDescription()}"></span>
-                    <p><span th:text="${news.getCommentCount()}"></span>个回复
-                        · <span th:text="${news.getViewCount()}"></span>次预览
-                        · <span th:text="${#dates.format(news.getGmtCreate())}"></span>
-                        <!--                        · <span th:text="${}"></span>-->
-                    </p>
-                </div>
-            </div>
-            <!--            分页组件-->
-            <nav aria-label="Page navigation">
-                <ul class="pagination">
-                    <li th:if="${questionDTOList.showFirst}">
-                        <a href="/?page=1" aria-label="First">
-                            <span aria-hidden="true">&lt;&lt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${questionDTOList.showPrevious}">
-                        <a th:href="@{/(page=${ questionDTOList.page }-1)}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                        </a>
-                    </li>
-                    <li
-                            th:class="${ iPage == questionDTOList.page } ? 'active':''"
-                            th:each="iPage : ${ questionDTOList.pages }">
-                        <a th:href="@{/(page=${iPage})}"
-                           th:text="${ iPage }"
-                        ></a></li>
-                    <li  th:if="${questionDTOList.showNext}">
-                        <a th:href="@{/(page=${questionDTOList.page}+1)}" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${questionDTOList.showEndPage}">
-                        <a th:href="@{/(page=${questionDTOList.totalPage})}" aria-label="EndPage">
-                            <span aria-hidden="true">&gt;&gt;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <div class="list-group">
+                <a href="/profile/questions"
+                   th:class="${ section == 'questions' } ? 'list-group-item active' : 'list-group-item' ">
+                    我的问题
+                </a>
+                <a href="/profile/replies"
+                   th:class="${ section == 'replies' } ? 'list-group-item active' : 'list-group-item' ">
+                    最新回复
+                    <span class="badge">0</span>
+                </a>
+                <a href="/profile/settings"
+                   th:class="${ section == 'settings' } ? 'list-group-item active' : 'list-group-item' ">
+                    个人资料
+                </a>
+            </div>
         </div>
     </div>
 </div>
 
-<link rel="stylesheet" href="css/Community.css">
+<link rel="stylesheet" href="/css/Community.css">
 </body>
 </html>
