--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -16,6 +16,57 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${ sectionName }"></span></h2>
             <hr>
+<!--            我的问题组件-->
+            <div th:if="${sectionName} == '我的提问'">
+                <div class="media" th:each="news : ${ paginationDTO.questions }">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object avatar-publisher img-rounded"
+                                 th:src="${news.getUser().avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading" th:text="${news.getTitle()}"></h4>
+<!--                        <span th:text="${news.getDescription()}"></span>-->
+                        <p><span th:text="${news.getCommentCount()}"></span>个回复
+                            · <span th:text="${news.getViewCount()}"></span>次预览
+                            · <span th:text="${#dates.format(news.getGmtCreate())}"></span>
+                            <!--                        · <span th:text="${}"></span>-->
+                        </p>
+                    </div>
+                </div>
+                <!--            分页组件-->
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li th:if="${paginationDTO.showFirst}">
+                            <a href="/profile/questions?page=1" aria-label="First">
+                                <span aria-hidden="true">&lt;&lt;</span>
+                            </a>
+                        </li>
+                        <li th:if="${paginationDTO.showPrevious}">
+                            <a th:href="@{'/profile/'+${ section }(page=${ paginationDTO.page }-1)}" aria-label="Previous">
+                                <span aria-hidden="true">&lt;</span>
+                            </a>
+                        </li>
+                        <li
+                                th:class="${ iPage == paginationDTO.page } ? 'active':''"
+                                th:each="iPage : ${ paginationDTO.pages }">
+                            <a th:href="@{'/profile/'+${ section }(page=${iPage})}"
+                               th:text="${ iPage }"
+                            ></a></li>
+                        <li  th:if="${paginationDTO.showNext}">
+                            <a th:href="@{'/profile/'+${ section }(page=${paginationDTO.page}+1)}" aria-label="Next">
+                                <span aria-hidden="true">&gt;</span>
+                            </a>
+                        </li>
+                        <li th:if="${paginationDTO.showEndPage}">
+                            <a th:href="@{'/profile/'+${ section }(page=${paginationDTO.totalPage})}" aria-label="EndPage">
+                                <span aria-hidden="true">&gt;&gt;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group">
