--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,10 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${news.getTitle()}"></h4>
+                    <h4 class="media-heading">
+                        <a th:href="@{'/question/'+${news.getId()}}"
+                           th:text="${news.getTitle()}"></a>
+                    </h4>
                     <span th:text="${news.getDescription()}"></span>
                     <p><span th:text="${news.getCommentCount()}"></span>个回复
                         · <span th:text="${news.getViewCount()}"></span>次预览
