--- a/src/main/resources/templates/common/navBar.html
+++ b/src/main/resources/templates/common/navBar.html
@@ -35,7 +35,7 @@
                             <li><a href="/publish">发布问题</a></li>
                             <li><a href="/profile/settings">个人中心</a></li>
                             <li><a href="/profile/questions">我的问题</a></li>
-                            <li><a href="#">注销</a></li>
+                            <li><a href="/logout">退出登录</a></li>
                         </ul>
                     </li>
                 </ul>
