--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object avatar-publisher img-rounded"
-                             th:src="${news.getUser().avatarUrl}">
+                             th:src="${news.user.avatarUrl}">
                     </a>
                 </div>
                 <div class="media-body">
